Fix mobile logo stretch

--- a/styles/index.css
+++ b/styles/index.css
@@ -123,7 +123,7 @@ main > div > span > span:not(.morse) {
 
 main > div > span > span > img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: contain;
   min-width: 0;
   min-height: 0;
